--- a/src/main/webapp/css/form.css
+++ b/src/main/webapp/css/form.css
@@ -201,6 +201,11 @@ input[type=submit]:hover {
     background-color: #08457E;
 }
 
+#successMessage
+{
+    display:none; color: green; font-weight: bold; margin-top: 20px;
+}
+
 /*------------ Per eventuali adattamenti (responsive web design) -------------*/
 @media(max-width: 1200px) {
 }
