--- a/src/main/webapp/css/chatta_con_noi.css
+++ b/src/main/webapp/css/chatta_con_noi.css
@@ -298,8 +298,14 @@ input[type=submit]:hover {
     background-color: #08457E;
 }
 
-/*------------ Per eventuali adattamenti (responsive web design) -------------*/
+#successMessage {
+    display:none;
+    color: green;
+    font-weight: bold;
+    margin-top: 20px;
+}
 
+/*------------ Per eventuali adattamenti (responsive web design) -------------*/
 
 @media(max-width: 1200px) {
     .containerChat {
