provato a rendere il form più carino nella pagina helpdesk

--- a/src/main/webapp/css/helpdesk.css
+++ b/src/main/webapp/css/helpdesk.css
@@ -228,7 +228,7 @@ input[type=submit]:hover {
 
 .new-ticket-form div {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-basis: calc(50% - 10px); /* Two items per row */
 }
 
