Pagina Helpdesk css, commenti e ottimizzazione codice

--- a/src/main/webapp/css/helpdesk.css
+++ b/src/main/webapp/css/helpdesk.css
@@ -1,3 +1,4 @@
+/*--------------------------------  Stile titolo  ------------------------------------*/
 .sectionTitle {
     gap: 8px;
     width: 100%;
@@ -15,12 +16,114 @@ h1 {
     text-align:left;
 }
 
-/* Stili di base per i ticket e gli elementi */
+/*----------------------------------- Stile Form Nuovo Ticket ------------------------------------------------*/
+
+fieldset{
+    gap: 32px; /*spazio tra gli elementi del modulo */
+    width: 100%;
+    overflow: hidden; /*L'overflow viene ritagliato e il resto del contenuto sarà invisibile*/
+    position: relative; /*Posiziona l'elemento relativamente alla posizione che assumerebbe normalmente il normal flow */
+    display: flex; /* usa il flexbox per il layout */
+    align-items: center;
+    flex-direction: column;
+    border: 2px solid #2F2F2F;/* stile bordi */
+    border-radius: 16px; /*angolo arrtondati */
+}
+
+legend{
+    display: block;
+    font-weight: 600;
+    font-size: 28px;
+    color: #4F4F4F;
+}
+
+/*Container per riga*/
+.container {
+    gap: 16px;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+}
+
+/*Container label+input 50%*/
+.inputForm {
+    gap: 8px;
+    width: 50%;
+    display: flex;
+    align-self: stretch;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+/*input type text,email,tel FORM*/
+input[type=text],
+input[type=email],
+input[type=tel]{
+    /*cursore del mouse*/
+    cursor: auto;
+    outline: none;
+    padding: 8px;
+    border: 2px solid #E1E1E1;
+    border-radius: 8px;
+    align-self: stretch;
+}
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=tel]:focus {
+    border-color: #2F2F2F;
+}
+
+/*select FORM*/
+select {
+    cursor: pointer;
+    width: 100%;
+    padding: 8px;
+    border: 2px solid #E1E1E1;
+    border-radius: 8px;
+}
+/*Assegna uno stile a un campo di input quando è attivo*/
+select:focus {
+    border-color: #2F2F2F;
+}
+
+/*Container label+input (larghezza 100%) per textarea e input type file*/
+.inputForm100 {
+    gap: 8px;
+    width: 100%;
+    display: flex;
+    align-self: stretch;
+    align-items: stretch;
+    flex-direction: column;
+}
+
+/*area di testo FORM, utilizzo l'id per evitare ambiguità con il textarea all'interno del ticket*/
+#detail {
+    cursor: auto;
+    width: 100%;
+    height: 150px;
+    padding: 8px;
+    border: 2px solid #E1E1E1;
+    border-radius: 8px;
+    /*ridimensiona l'altezza*/
+    resize: vertical;
+}
+#detail:focus {
+    border-color: #2F2F2F;
+}
+
+hr{
+    height: 2px;
+    width: 100%;
+    background-color: #EFEFEF;
+    margin-top: 32px;
+}
+
+/*----------------------------------- Stili di base per i ticket e gli elementi ------------------------------------*/
 
 /*1 - container principale per filtro + ticket*/
 .ticket-container {
     width: 100%;
-    /*max-width: 1000px;*/
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -36,7 +139,7 @@ h1 {
     flex-direction: row;
     margin-bottom: 32px;
 }
-
+/* Stile immagine */
 .image {
     width: 32px;
     height: 32px;
@@ -57,13 +160,10 @@ h1 {
     align-items: center;
     justify-content: space-between;
 }
-
 .active, .ticketHeader:hover {
     background-color: #D2D2D2;
 }
-/* Aggiungere un simbolo a ciascun pulsante per indicare
-se il contenuto comprimibile è aperto o chiuso */
-
+/* Aggiungere un simbolo a ciascun pulsante per indicare se il contenuto comprimibile è aperto o chiuso */
 .ticketHeader:after {
     content: "+";
     color: black;
@@ -72,7 +172,6 @@ se il contenuto comprimibile è aperto o chiuso */
     margin-left: 16px;
 
 }
-
 .active:after {
     content: "-";
     color: black;
@@ -94,17 +193,17 @@ h3{
     font-weight: 600;
     line-height: 1.5;
 }
-
-.statusDefault {
-    padding: 8px 16px;
-    width: 250px;
-    border-radius: 4px;
-    color: red;
-    font-weight: 600;
+/* Stile colore stato ticket */
+.colourStatus {
+    display: inline-block; /* O flex */
+    width: 150px; /* Imposta una larghezza fissa */
     text-align: center;
-    background: #ffbfaa;
+    border-radius: 4px;
+    font-weight: bold;
+    border: #2F2F2F 2px solid;
+    padding: 8px 16px;
 }
-
+/* Stile contenuto ticket */
 .ticketBody {
     background-color: white;
     border: 2px solid #D2D2D2;
@@ -114,7 +213,7 @@ h3{
     overflow: hidden;
     margin-bottom: 32px;
 }
-
+/* Container dati da visualizzare */
 .containerDati{
     width: 100%;
     display: flex;
@@ -137,11 +236,6 @@ h3{
     color: black;
     margin-right: 5px;
 }
-.strongTitleHeader{
-    display: flex;
-    align-items: center;
-
-}
 
 .elencoDati {
     gap: 8px;
@@ -150,7 +244,7 @@ h3{
     align-items: flex-start;
 }
 
-textarea {
+#textAnswer {
     cursor: auto;
     width: 100%;
     height: 200px;
@@ -161,7 +255,7 @@ textarea {
     margin-bottom: 16px;
     margin-top: 32px;
 }
-textarea:focus {
+#textAnswer:focus {
     border-color: #2F2F2F;
 }
 
@@ -181,70 +275,51 @@ input[type=submit]:hover {
     background-color: #08457E;
 }
 
-/*container per history*/
+/*Container per History*/
 .containerHistory{
     gap: 8px;
     display: flex;
     align-self: flex-end;
     align-items: initial;
     flex-direction: column;
-    margin-top: 64px;
+    margin-top: 48px;
 }
-
-/* testo history */
-#log {
-    margin-top: 16px;
+/*Container per titolo History*/
+.titleHistory{
+    display: flex;
+    align-items: center;
 }
-
-.colourStatus {
-    display: inline-block; /* O flex */
-    width: 140px; /* Imposta una larghezza fissa */
-    text-align: center;
-    padding: 5px;
-    border-radius: 10px;
-    font-weight: bold;
-    border: #2F2F2F 2px solid;
-}
-
-.ticket {
-    margin-top: 4px;
-}
-
-.ticket-container {
-    border: #2F2F2F 1px solid;
-    border-radius: 10px;
-}
-
-.new-ticket-form {
-    background-color: #f9f9f9; /* Light background color */
-    padding: 20px; /* Padding around the form */
-    border: 1px solid #ccc; /* Light border */
-    border-radius: 5px; /* Rounded corners */
-    margin-bottom: 20px; /* Space below the form */
-    display: flex; /* Use flexbox for layout */
-    flex-wrap: wrap; /* Allow wrapping to the next line */
-    gap: 10px; /* Space between form elements */
-}
-
-.new-ticket-form div {
+/*Container per elenco dati History*/
+.elencoHistory{
+    gap: 8px;
     display: flex;
     flex-direction: row;
-    flex-basis: calc(50% - 10px); /* Two items per row */
+
+}
+/*Container per bottoni annullamento/chiusura ticket*/
+.containerChiusura{
+    margin-top: 32px;
+    display: flex;
+    flex-direction: row;
 }
 
-.new-ticket-form label {
-    margin-bottom: 5px; /* Space below labels */
-    font-weight: bold; /* Bold labels */
+.buttonChiusura{
+    background-color: #EFEFEF;
+    color: black;
+    border:none;
+    cursor: pointer;
+    transition-duration: 0.3s;
+    font-weight: normal;
+    border-radius: 4px;
+    padding:8px 16px;
+    width: 180px;
+    justify-content: center;
+}
+.buttonChiusura:hover {
+    background-color: #C0C0C0;
 }
 
-.new-ticket-form input[type="text"],
-.new-ticket-form input[type="number"],
-.new-ticket-form input[type="email"],
-.new-ticket-form textarea {
-    padding: 10px; /* Padding inside inputs */
-    margin-bottom: 10px; /* Space below inputs */
-    border: 1px solid #ccc; /* Light border */
-    border-radius: 3px; /* Rounded corners */
-    box-sizing: border-box; /* Include padding and border in element's total width and height */
+/* Spazio tra i ticket */
+.ticket {
+    margin-top: 8px;
 }
-
